syntax = "proto3";

package proto;

service Pilipili {
  rpc RpcGetVideoInfo(GetVideoRequest) returns (VideoInfo) {}
  rpc RpcCreateVideoInfo(VideoInfo) returns (CreateVideoReplay) {}
}

message GetVideoRequest {
  string id = 1;
}

message CreateVideoReplay {
  string status = 1;
}

message VideoInfo {
  string id = 1;
  string title = 2;
  string note = 3;
  string pic = 4;
  string video = 5;
}